feat: use jwt instead
